fix: save button covered by zoom controls

--- a/src/orapamine.scss
+++ b/src/orapamine.scss
@@ -55,7 +55,7 @@
   width: 100%;
 
   @media screen and (max-width: 800px) {
-    padding: 60px 8px 0 8px;
+    padding: 80px 8px 0 8px;
   }
 
   * {
